# gridplayer-flatpak

./: PKG-INFO  pyproject.toml  setup.py
gridplayer/: settings.py
gridplayer/dialogs/: about.py  about_dialog_ui.py  add_urls.py  exception_dialog_ui.py  input_dialog.py  rename_dialog.py  settings.py  settings_dialog_ui.py
gridplayer/main/: init_app_env.py  init_resources.py  run.py
gridplayer/models/: playlist.py  recent_list.py  resolver_patterns.py  stream.py  video.py  video_uri.py
gridplayer/multiprocess/: command_loop.py  instance_process.py  process_manager.py  safe_shared_memory.py
gridplayer/params/: actions.py  env.py  languages.py  static.py
gridplayer/player/: __init__.py  manager.py
gridplayer/player/managers/: actions.py  add_videos.py  grid.py  macos_fileopen.py  mouse_hide.py  playlist.py  recent_list.py  snapshots.py  video_blocks.py
gridplayer/utils/: aspect_calc.py  command_helpers.py  excepthook.py  files.py  keepawake.py  keepawake_macos.py  libvlc.py  libvlc_fixer.py  libvlc_options_parser.py  log.py  log_config.py  misc.py  next_file.py  qt.py  single_instance.py  time_txt.py
gridplayer/utils/stream_proxy/: m3u8.py  server.py  session.py  wrappers.py
gridplayer/utils/url_resolve/: resolver_base.py  resolver_streamlink.py  resolver_yt_dlp.py  static.py  stream_detect.py  url_resolve.py
gridplayer/vlc_player/: image_decoder.py  instance.py  libvlc.py  player_base.py  player_event_manager.py  player_event_waiter.py  player_tracks_manager.py  static.py  video_driver_base.py  vlc.py
gridplayer/widgets/: language_list.py  resolver_patterns_list.py  video_block.py  video_frame_dummy.py  video_frame_vlc_base.py  video_frame_vlc_hw.py  video_frame_vlc_hw_sp.py  video_frame_vlc_sw.py  video_overlay.py  video_overlay_buttons.py  video_overlay_elements.py  video_status.py  video_status_info.py  video_status_loading.py
meta/: com.vzhd1701.gridplayer.appdata.xml  com.vzhd1701.gridplayer.desktop  com.vzhd1701.gridplayer.xml
