[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "gridplayer"
version = "0.5.4"
description = "Play videos side-by-side"
authors = [
  { name = "vzhd1701", email = "vzhd1701@gmail.com" }
]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["video", "player", "vlc", "pyqt", "Qt5", "multimedia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Multimedia :: Video :: Display",
]
requires-python = ">=3.10"
dependencies = [
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.2 ; sys_platform == 'win32'",
    "PyQt5-Qt5==5.15.2 ; sys_platform == 'linux'",
    "PyQt5-Qt5==5.15.18 ; sys_platform == 'darwin'",
    "pydantic (>=2.12.5,<3.0.0)",
    "streamlink (>=8.1.0,<9.0.0)",
    "yt-dlp[default] (>=2025.12.8,<2026.0.0)",
    "pyobjc-core ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa ; sys_platform == 'darwin'",
    "pydantic-extra-types (>=2.10.6,<3.0.0)",
]

[project.urls]
repository = "https://github.com/vzhd1701/gridplayer"
changelog = "https://github.com/vzhd1701/gridplayer/blob/master/CHANGELOG.md"

[project.scripts]
gridplayer = "gridplayer.__main__:main"

[dependency-groups]
dev = [
    "mdformat==1.0.0",
    "pre-commit>=2.15.0",
    "pytest>=7.1.2",
    "keepachangelog>=1.0.0",
    "ruff (>=0.14.10,<0.15.0)",
]

[tool.poetry.group.dev]
optional = true

[tool.ruff]
extend-exclude = ["gridplayer/resources_bin.py", "gridplayer/vlc_player/vlc.py"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
exclude = ["tests/*.py", "scripts/*"]
select = [
    # Complexity
    #"PL",   # pylint
    #"C90",  # maccabe

    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    ##"COM",  # flake8-commas
    ##"D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    #"ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    ##"FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    ##"FURB", # refurb
    ##"G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    ##"N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    ##"RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    #"S",    # flake8-bandit
    ##"SIM",  # flake8-simpify
    ##"SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "B904",     # raise from
    "B905",     # `zip()` without an explicit `strict=` parameter
    "E501",     # Line too long
    "RUF012",   # Mutable class attributes should be annotated with `typing.ClassVar`
    "TRY003",   # long exception messages
]

[tool.ruff.lint.extend-per-file-ignores]
"__main__.py" = ["E402"]
